# iot-inspection-competition-2026056620

./: .gitignore  README.md  项目结构与运行入口.txt
2026056620-参赛总文件夹/: 2026056620-提交材料清单.md  README.txt
2026056620-参赛总文件夹/2026056620-01 作品与答辩材料/: 2026056620-答辩PPT内容规划.md  2026056620-答辩展示素材清单.md  2026056620-系统架构与运行展示说明.md  README.txt
2026056620-参赛总文件夹/2026056620-02 素材和源码/: README.txt  开源组件与版权说明.txt  源码说明-readme.txt  运行环境与依赖说明.txt
2026056620-参赛总文件夹/2026056620-02 素材和源码/source_package/iot_inspection_ros2_mvp/ros2_ws/src/inspection_mvp/: package.xml  setup.py
2026056620-参赛总文件夹/2026056620-02 素材和源码/source_package/iot_inspection_ros2_mvp/ros2_ws/src/inspection_mvp/config/: demo.yaml
2026056620-参赛总文件夹/2026056620-02 素材和源码/source_package/iot_inspection_ros2_mvp/ros2_ws/src/inspection_mvp/inspection_mvp/: crack_detector_node.py  fake_base_node.py  image_source_node.py  inspection_manager_node.py  meter_detector_node.py
2026056620-参赛总文件夹/2026056620-03 设计和开发文档/: 2026056620-AI工具使用说明.md  2026056620-作品信息摘要.md  2026056620-测试报告.md  2026056620-物联网应用类作品技术文档.md  README.txt
2026056620-参赛总文件夹/2026056620-04 作品演示视频/: 2026056620-作品演示视频提交说明.md  2026056620-录屏运行指令.txt  2026056620-演示视频素材清单.md  README.txt
iot_inspection_ros2_mvp/: .gitignore  README.md  requirements.txt
iot_inspection_ros2_mvp/demo_images/: README.md
iot_inspection_ros2_mvp/docs/: demo_script.md  meter_integration_checklist.md  technical_description.md  topic_interface.md  troubleshooting.md
model_reference/: README.md  data.yaml
scripts/: check_submission_tree.py  create_submission_workspace.py  package_source.py
(+28 files in other folders)
