<?xml version="1.0"?>
<package format="3">
  <name>inspection_mvp</name>
  <version>0.1.0</version>
  <description>ROS2 Python MVP for power inspection robot crack detection demo.</description>
  <maintainer email="demo@example.com">inspection_mvp</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
